SDKs/twilio.com/twilio_insights_v1/1.37.4/java/USAGE.md
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            FetchAccountSettingsRequest req = new FetchAccountSettingsRequest() {{
                security = new FetchAccountSettingsSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                queryParams = new FetchAccountSettingsQueryParams() {{
                    subaccountSid = "laboriosam";
                }};
            }};

            FetchAccountSettingsResponse res = sdk.fetchAccountSettings(req);

            if (res.insightsV1AccountSettings.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->